--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-    "name": "tmagames-flappy-multiplayer",
-    "version": "1.0.0",
-    "description": "Multiplayer Flappy Bird for TMAGames",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
-    },
-    "keywords": ["multiplayer", "game", "flappy-bird", "websocket"],
-    "author": "TMAGames",
-    "license": "MIT",
-    "dependencies": {
-      "express": "^4.18.2",
-      "ws": "^8.14.2"
-    },
-    "devDependencies": {
-      "nodemon": "^3.0.1"
-    },
-    "engines": {
-      "node": ">=14.0.0"
-    }
+  "name": "flappy-bird-multiplayer",
+  "version": "1.0.0",
+  "description": "Multiplayer Flappy Bird on Vercel",
+  "main": "api/index.js",
+  "scripts": {
+    "dev": "vercel dev",
+    "start": "vercel dev"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "ws": "^8.14.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
+}
