--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "flappy-bird-multiplayer",
   "version": "1.0.0",
-  "description": "Multiplayer Flappy Bird on Vercel",
-  "main": "api/index.js",
+  "description": "Multiplayer Flappy Bird on Railway",
+  "main": "server.js",
   "scripts": {
-    "dev": "vercel dev",
-    "start": "vercel dev"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
